2012-01-16  Albert Chu <chu11@llnl.gov>

	* man/manpage-common-inband.man: Clarify argument input.

2012-01-15  Albert Chu <chu11@llnl.gov>

	* doc/freeipmi-faq.texi: Add some OpenIPMI linux kerneld driver
	notes.
	
2012-01-15  Albert Chu <chu11@llnl.gov>

	Merge branch dellsolinstancecapacity

	* libipmiconsole/ipmiconsole_processing.c (_check_sol_activated):
	Workaround bug in Dell Poweredge M605, Dell Poweredge M610, and
	Dell Poweredge M915 where instance count of SOL is returned as 0.

2012-01-13  Albert Chu <chu11@llnl.gov>

	* Audit and add asserts appropriately to large number of functions.

	* common/configtool/: All config tools support hostranges, so
	replace PSTDOUT_PRINTF with pstdout_printf, PSTDOUT_FPRINTF with
	pstdout_fprintf, and PSTDOUT_PERROR with pstdout_perror.
	
2012-01-13  Albert Chu <chu11@llnl.gov>

	* doc/solstatediagram.dot: SOL State Diagram documentation.
	
2012-01-13  Albert Chu <chu11@llnl.gov>

	* libipmiconsole/ipmiconsole_processing.c
	(_process_protocol_state_deactivate_payload_sent): Fix deactivate
	only corner case in which session not closed cleanly.
	
2012-01-12  Albert Chu <chu11@llnl.gov>

	Merge branch redotemplatedocs

	* libfreeipmi/include/freeipmi/templates/: Redo format.  Update
	OEM motherboard lists.

	*
	libfreeipmi/include/record-format/ipmi-oem-intel-node-manager-cmds.h:
	Update motherboard list.

	* libfreeipmi/: Clean up some comments in various files.
	
2012-01-12  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/sensor-read/ipmi-sensor-read.c
	(_sensor_reading_corner_case_checks): Handle corner case in Sun
	Blade 6000M2.
	
2012-01-11  Albert Chu <chu11@llnl.gov>

	Merge sunbladex6250sensor branch

	* libfreeipmi/sensor-read/ipmi-sensor-read.c
	(_sensor_reading_corner_case_checks): Handle corner case in Sun
	Blade x6250.

	* libfreeipmi/sensor-read/ipmi-sensor-read.c
	(_sensor_reading_corner_case_checks): Slightly alter error code
	return interpretations.
	
2012-01-10  Albert Chu <chu11@llnl.gov>
